--- a/_data/profile.yml
+++ b/_data/profile.yml
@@ -1,22 +1,22 @@
-primary_name: "Your Name"
+primary_name: "Yao Wei"
 secondary_name: ""
-navbar_name: "Your Name"
+navbar_name: "Yao Wei"
 
 positions:
-- name: Title or Position
-- name: Affiliation Name
+- name: Postdoctoral Research Associate
+- name: Queen Mary University of London
   logo: /assets/images/badges/MIT_Social_circle.png  # Logo is optional
 
 
-email: "your@email.com"
+email: "weicc1996@gmail.com"
 # cv_link: link-to-your-cv-file
-gscholar: xFmQpf4AAAAJ  # This is an example, replace it with your own Google Scholar ID
-github: your_github_id
-twitter: your_twitter_id  # Do not include the '@' symbol
+gscholar: NYYC2JwAAAAJ  # This is an example, replace it with your own Google Scholar ID
+github: weiyao1996
+# twitter: your_twitter_id  # Do not include the '@' symbol
 # wechat_qrcode: /assets/images/etc/wechat.jpg
 # wechat_prompt: >-
 #   Please tell me your <strong>name</strong> and <strong>affiliation</strong> (current or past) when adding my wechat. Thanks!
-# linkedin: your-linked-in-id
+linkedin: yao-wei-1062471ab
 # orcid: 0000-0000-0000-0000
 
 short_bio_text_justify: false
@@ -32,30 +32,36 @@ short_bio: >-
 
 portrait_url: /assets/images/photos/portrait.jpg
 portrait_caption: >-
-  Photo by Manja Vitolic on Unsplash (this caption is optional, comment it out to disable).
+  # Photo by Manja Vitolic on Unsplash (this caption is optional, comment it out to disable).
 
 education:
-- name: Massachusetts Institute of Technology
-  logo: /assets/images/badges/MIT_Social_circle.png
+- name: University of Twente
+  logo: /assets/images/badges/UT.png
+  position: >- 
+    ITC <br/>
+    Ph.D. Student
+  date: Sep. 2021 - Aug. 2024
+- name: Wuhan University
+  logo: /assets/images/badges/WHU.png
   position: >- 
     Department of Electrical Engineering and Computer Science <br/>
     Ph.D. Student
   date: Sep. 2024 - present
 - name: Peking University
-  logo: /assets/images/badges/PKU_red.png
+  logo: /assets/images/badges/UPC.png
   position: B.S. in Computer Science
   date: Sep. 2019 - Jul. 2021
 
-# experience:
-# - name: Peking University
-#   logo: /assets/images/badges/PKU_red.png
-#   position: Research Intern
-#   date: Sep. 2019 - Jul. 2021
+experience:
+- name: Peking University
+  logo: /assets/images/badges/PKU_red.png
+  position: Research Intern
+  date: Sep. 2019 - Jul. 2021
 
-awards:
-- name: Award Name 2
-  date: 2024
-- name: Award Name 1 
-  date: 2021
-- name: A quick brown fox jumps over the lazy dog and runs away award
-  date: 2021
+# awards:
+# - name: Award Name 2
+#   date: 2024
+# - name: Award Name 1 
+#   date: 2021
+# - name: A quick brown fox jumps over the lazy dog and runs away award
+#   date: 2021
