--- a/_data/profile.yml
+++ b/_data/profile.yml
@@ -58,21 +58,21 @@ education:
   position: B.S. in 
   date: September 2014 - June 2018
 
-experience:
-- name: University of Bath
-  logo: /assets/images/badges/UoB.png
-  position: Visiting Scholar
-  date: September 2025 - December 2025
+# experience:
+# - name: University of Bath
+#   logo: /assets/images/badges/UoB.png
+#   position: Visiting Scholar
+#   date: September 2025 - December 2025
 
-- name: Amazon Web Services (AWS) AI labs
-  logo: /assets/images/badges/AWS.png
-  position: Applied Scientist Intern
-  date: January 2025 - April 2025
+# - name: Amazon Web Services (AWS) AI labs
+#   logo: /assets/images/badges/AWS.png
+#   position: Applied Scientist Intern
+#   date: January 2025 - April 2025
 
-- name: Italian Institute of Technology (IIT)
-  logo: /assets/images/badges/IIT.png
-  position: Applied Scientist Intern
-  date: July 2024 - December 2025
+# - name: Italian Institute of Technology (IIT)
+#   logo: /assets/images/badges/IIT.png
+#   position: Applied Scientist Intern
+#   date: July 2024 - December 2025
 
 # awards:
 # - name: Award Name 2
