--- a/_data/profile.yml
+++ b/_data/profile.yml
@@ -24,16 +24,16 @@ short_bio: >-
   <p>
     I received the PhD at <a href="https://www.itc.nl/" target="_blank">ITC</a>, <a href="https://www.utwente.nl/" target="_blank">University of Twente</a>, 
     supervised by <a href="https://research.utwente.nl/en/persons/george-vosselman" target="_blank">Prof. George Vosselman</a> and <a href="https://sites.google.com/site/michaelyingyang" target="_blank">Prof. Michael Yang</a>. 
+    During my doctoral study, I worked as an Applied Scientist Intern at <a href="https://aws.amazon.com/" target="_blank">Amazon Web Services (AWS) </a> AI labs, USA. 
+    Before that, I visited <a href="https://iit.it/" target="_blank">Italian Institute of Technology (IIT)</a>, Italy, working with researchers of the Pattern Analysis and Computer Vision (PAVIS) headed by <a href="https://www.iit.it/people/alessio-delbue" target="_blank">Dr. Alessio Del Bue</a>.
     My doctoral research interests include generative models, multimodal learning, and 3D scene synthesis.
+  </p>
+  <p>
     Prior to this, I received the M.S. degree in photogrammetry and remote sensing from <a href="http://en.whu.edu.cn/" target="_blank">Wuhan University</a> 
     where I worked on road extraction from aerial and satellite images using deep learning techniques (<a href="/_publications/Master_Thesis_Yao_Wei_2021.pdf" target="_blank">Master Thesis</a>), advised by <a href="http://gpcv.whu.edu.cn/" target="_blank">Prof. Shunping Ji</a>.
   </p>
   <p>
-    In addition, I worked as an Applied Scientist Intern at <a href="https://aws.amazon.com/" target="_blank">Amazon Web Services (AWS) </a> AI labs, USA. 
-    Before that, I visited <a href="https://iit.it/" target="_blank">Italian Institute of Technology (IIT)</a>, Italy, working with researchers of the Pattern Analysis and Computer Vision (PAVIS) headed by <a href="https://www.iit.it/people/alessio-delbue" target="_blank">Dr. Alessio Del Bue</a>.
-  </p>
-  <p>
-    If you are interested in my research or have any use cases that you would like to collaborate on, feel free to contact me!
+    If you are interested in my research or have any use cases to collaborate on, feel free to contact me!
   </p>
 
 portrait_url: /assets/images/photos/portrait_ywei.jpg
