Update names in profile.yml for consistency

--- a/_data/profile.yml
+++ b/_data/profile.yml
@@ -1,6 +1,6 @@
-primary_name: "Yao Wei 魏瑶"
+primary_name: "Yao Wei/魏瑶"
 secondary_name: ""
-navbar_name: "Y Wei"
+navbar_name: "Y. Wei"
 
 positions:
 - name: Postdoctoral Research Associate
