--- a/_data/profile.yml
+++ b/_data/profile.yml
@@ -64,15 +64,15 @@ experience:
   position: Visiting Scholar
   date: September 2025 - December 2025
 
-# - name: Amazon Web Services (AWS) AI labs
-#   logo: /assets/images/badges/AWS.png
-#   position: Applied Scientist Intern
-#   date: January 2025 - April 2025
+- name: Amazon Web Services (AWS) AI labs
+  logo: /assets/images/badges/AWS.png
+  position: Applied Scientist Intern
+  date: January 2025 - April 2025
 
-# - name: Italian Institute of Technology (IIT)
-#   logo: /assets/images/badges/IIT.png
-#   position: Applied Scientist Intern
-#   date: July 2024 - December 2025
+- name: Italian Institute of Technology (IIT)
+  logo: /assets/images/badges/IIT.png
+  position: Applied Scientist Intern
+  date: July 2024 - December 2025
 
 # awards:
 # - name: Award Name 2
