--- a/_data/profile.yml
+++ b/_data/profile.yml
@@ -67,7 +67,7 @@ experience:
 
 - name: Italian Institute of Technology (IIT)
   logo: /assets/images/badges/IIT.png
-  position: Applied Scientist Intern
+  position: Visiting PhD Student
   date: July 2024 - December 2025
 
 # awards:
