--- a/_data/profile.yml
+++ b/_data/profile.yml
@@ -60,7 +60,7 @@ experience:
   position: Visiting Scholar
   date: September 2025 - December 2025
 
-- name: Amazon Web Services (AWS) AI labs
+- name: Amazon Web Services (AWS)
   logo: /assets/images/badges/AWS.png
   position: Applied Scientist Intern
   date: January 2025 - April 2025
