--- a/_data/profile.yml
+++ b/_data/profile.yml
@@ -1,4 +1,4 @@
-primary_name: "Yao Wei/魏瑶"
+primary_name: "Yao Wei"
 secondary_name: ""
 navbar_name: "Y. Wei"
 
@@ -27,7 +27,7 @@ short_bio: >-
   </p>
   <p>
     I received my PhD from <a href="https://www.itc.nl/" target="_blank">ITC</a>, <a href="https://www.utwente.nl/" target="_blank">University of Twente</a> in 2025, supervised by <a href="https://research.utwente.nl/en/persons/george-vosselman" target="_blank">Prof. George Vosselman</a> and <a href="https://sites.google.com/site/michaelyingyang" target="_blank">Prof. Michael Yang</a>.     
-    Prior to this, I received the M.S. degree in photogrammetry and remote sensing from <a href="http://en.whu.edu.cn/" target="_blank">Wuhan University</a> where I worked on road extraction from aerial and satellite images using deep learning techniques (<a href="/_publications/Master_Thesis_Yao_Wei_2021.pdf" target="_blank">Master Thesis</a>), advised by <a href="http://gpcv.whu.edu.cn/" target="_blank">Prof. Shunping Ji</a>.
+    Prior to this, I obtained my master degree in photogrammetry and remote sensing from <a href="http://en.whu.edu.cn/" target="_blank">Wuhan University</a> in 2021, advised by <a href="http://gpcv.whu.edu.cn/" target="_blank">Prof. Shunping Ji</a>.
   </p>
   <p>
     My research interests include generative models, multimodal learning, and 3D scene synthesis.
