--- a/_data/profile.yml
+++ b/_data/profile.yml
@@ -22,16 +22,17 @@ linkedin: yao-wei-1062471ab
 short_bio_text_justify: false
 short_bio: >-
   <p>
-    I am currently a Postdoctoral Research Associate at <a href="https://www.qmul.ac.uk/" target="_blank">QMUL</a>, supervised by <a href="https://www.seresearch.qmul.ac.uk/cmai/people/coh/" target="_blank">Dr. Changjae Oh</a>.
-    Previously, I was a Visiting Scholar at the <a href="https://www.bath.ac.uk/" target="_blank">University of Bath</a> for four months. I completed a four-month internship at <a href="https://aws.amazon.com/">AWS AI</a>. I also visited <a href="https://iit.it/">IIT</a> for six months.
+    I am currently a Postdoctoral Research Associate at <a href="https://www.qmul.ac.uk/" target="_blank">Queen Mary University of London</a>, supervised by <a href="https://www.seresearch.qmul.ac.uk/cmai/people/coh/" target="_blank">Dr. Changjae Oh</a>.
+    Previously, I was a Visiting Scholar at the <a href="https://www.bath.ac.uk/" target="_blank">University of Bath</a>. 
+    During my doctoral studies, I completed a four-month research internship at <a href="https://aws.amazon.com/">AWS AI</a> and spent six months as a visiting researcher at <a href="https://iit.it/">IIT</a>.
   </p>
   <p>
-    I received my PhD in computer science from <a href="https://www.itc.nl/" target="_blank">ITC</a>, <a href="https://www.utwente.nl/" target="_blank">University of Twente</a> in 2025, supervised by <a href="https://research.utwente.nl/en/persons/george-vosselman" target="_blank">Prof. George Vosselman</a> and <a href="https://sites.google.com/site/michaelyingyang" target="_blank">Prof. Michael Yang</a>.     
-    Prior to this, I obtained my master degree in photogrammetry and remote sensing from <a href="http://en.whu.edu.cn/" target="_blank">Wuhan University</a> in 2021, advised by <a href="http://gpcv.whu.edu.cn/" target="_blank">Prof. Shunping Ji</a>.
+    I received my PhD in 3D Scene Understanding and Generative AI from the <a href="https://www.itc.nl/" target="_blank">ITC</a> Faculty, <a href="https://www.utwente.nl/" target="_blank">University of Twente</a> in 2025, under the supervision of <a href="https://research.utwente.nl/en/persons/george-vosselman" target="_blank">Prof. George Vosselman</a> and <a href="https://sites.google.com/site/michaelyingyang" target="_blank">Prof. Michael Yang</a>.     
+    Prior to this, I obtained my master’s degree in Photogrammetry and Remote Sensing from <a href="http://en.whu.edu.cn/" target="_blank">Wuhan University</a> in 2021, advised by <a href="http://gpcv.whu.edu.cn/" target="_blank">Prof. Shunping Ji</a>.
   </p>
   <p>
-    My research interests include generative models, multimodal learning, and 3D scene synthesis.
-    If you are interested in my research or have any use cases to collaborate on, feel free to contact me!
+    My research interests include computer vision and machine learning.
+    If you are interested in my research or potential collaboration opportunities, please feel free to contact me!
   </p>
 
 portrait_url: /assets/images/photos/portrait_ywei.jpg
