--- a/_data/profile.yml
+++ b/_data/profile.yml
@@ -24,10 +24,10 @@ short_bio: >-
   <p>
     I am currently a Postdoctoral Research Associate at <a href="https://www.qmul.ac.uk/" target="_blank">Queen Mary University of London</a>, supervised by <a href="https://www.seresearch.qmul.ac.uk/cmai/people/coh/" target="_blank">Dr. Changjae Oh</a>.
     Previously, I was a Visiting Scholar at the <a href="https://www.bath.ac.uk/" target="_blank">University of Bath</a>. 
-    During my doctoral studies, I completed a four-month research internship at <a href="https://aws.amazon.com/">AWS AI</a> and spent six months as a visiting researcher at <a href="https://iit.it/">IIT</a>.
+    During my doctoral studies, I completed a four-month research internship at <a href="https://aws.amazon.com/">AWS</a> and spent six months as a visiting researcher at <a href="https://iit.it/">IIT</a>.
   </p>
   <p>
-    I received my PhD in 3D Scene Understanding and Generative AI from the <a href="https://www.itc.nl/" target="_blank">ITC</a> Faculty, <a href="https://www.utwente.nl/" target="_blank">University of Twente</a> in 2025, under the supervision of <a href="https://research.utwente.nl/en/persons/george-vosselman" target="_blank">Prof. George Vosselman</a> and <a href="https://sites.google.com/site/michaelyingyang" target="_blank">Prof. Michael Yang</a>.     
+    I received my PhD in 3D Scene Understanding and Generative AI from <a href="https://www.itc.nl/" target="_blank">ITC</a>, <a href="https://www.utwente.nl/" target="_blank">University of Twente</a> in 2025, under the supervision of <a href="https://research.utwente.nl/en/persons/george-vosselman" target="_blank">Prof. George Vosselman</a> and <a href="https://sites.google.com/site/michaelyingyang" target="_blank">Prof. Michael Yang</a>.     
     Prior to this, I obtained my master’s degree in Photogrammetry and Remote Sensing from <a href="http://en.whu.edu.cn/" target="_blank">Wuhan University</a> in 2021, advised by <a href="http://gpcv.whu.edu.cn/" target="_blank">Prof. Shunping Ji</a>.
   </p>
   <p>
