--- a/_data/profile.yml
+++ b/_data/profile.yml
@@ -62,11 +62,11 @@ experience:
   logo: /assets/images/badges/UoB.png
   position: Visiting Scholar
   date: September 2025 - December 2025
-- name: Amazon Web Services (AWS)
+- name: Amazon Web Services
   logo: /assets/images/badges/AWS.png
   position: Applied Scientist Intern
   date: January 2025 - April 2025
-- name: Italian Institute of Technology (IIT)
+- name: Italian Institute of Technology
   logo: /assets/images/badges/IIT.png
   position: Visiting Scientist
   date: July 2024 - December 2024
