--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -1,22 +1,17 @@
-"Your Name":
+"Yao Wei":
   bold: true
 
-"Robert White":
-  url: https://www.google.com/?q=Robert+White
+"Michael Ying Yang":
+  url: https://sites.google.com/site/michaelyingyang
+  
+"George Vosselman":
+  url: https://people.utwente.nl/george.vosselman
 
-"Charles Green (MIT)":
-  name: Charles Green
-  url: https://www.google.com/?q=Charles+Green+MIT
+"Li Erran Li":
+  url: https://www.cs.columbia.edu/~lierranli/
 
-"Charles Green (Stanford)":
-  name: Charles Green
-  url: https://www.google.com/?q=Charles+Green+Stanford
+"Martin Renqiang Min":
+  url: https://www.nec-labs.com/research/machine-learning/people/martin-renqiang-min/
 
-"Garrett Harris":
-  url: https://www.google.com/?q=Garrett+Harris
-
-"James Wang":
-  url: https://www.google.com/?q=James+Wang
-
-"John Doe":
-  url: https://www.google.com/?q=John+Doe
+"Shunping Ji":
+  url: https://gpcv.whu.edu.cn/
