Add Kai Zhang's URL to authors.yml

--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -15,3 +15,6 @@
 
 "Shunping Ji":
   url: https://gpcv.whu.edu.cn/
+
+"Kai Zhang":
+  url: https://scholar.google.com/citations?user=XEfDthAAAAAJ&hl=zh-CN
