--- a/_data/profile.yml
+++ b/_data/profile.yml
@@ -3,7 +3,7 @@ secondary_name: ""
 navbar_name: "Y. Wei"
 
 positions:
-- name: Postdoctoral Research Associate
+- name: Research Associate
 - name: Queen Mary University of London
   logo: /assets/images/badges/QMUL.png  # Logo is optional
 
