--- a/_data/profile.yml
+++ b/_data/profile.yml
@@ -43,15 +43,15 @@ education:
 - name: University of Twente
   logo: /assets/images/badges/UT-ITC-logo-RGB.png
   position: Ph.D. in CS
-  date: September 2021 - August 2025
+  date: 2021 - 2025
 - name: Wuhan University
   logo: /assets/images/badges/WHU.png
   position: M.S. in ML&RS
-  date: September 2018 - June 2021
+  date: 2018 - 2021
 - name: China University of Petroleum
   logo: /assets/images/badges/UPC.png
   position: B.S. in GIS
-  date: September 2014 - June 2018
+  date: 2014 - 2018
 
 experience:
 - name: Queen Mary University of London
