--- a/_data/profile.yml
+++ b/_data/profile.yml
@@ -24,11 +24,11 @@ short_bio: >-
   <p>
     I am currently a Postdoctoral Research Associate at <a href="https://www.qmul.ac.uk/" target="_blank">Queen Mary University of London</a>, supervised by <a href="https://www.seresearch.qmul.ac.uk/cmai/people/coh/" target="_blank">Dr. Changjae Oh</a>.
     Previously, I was a Visiting Scholar at the <a href="https://www.bath.ac.uk/" target="_blank">University of Bath</a>. 
-    During my doctoral studies, I completed a four-month research internship at <a href="https://aws.amazon.com/">AWS</a> and spent six months as a visiting researcher at <a href="https://iit.it/">IIT</a>. I was fortunate to have been supervised by <a href="https://www.iit.it/people-details/-/people/alessio-delbue" target="_blank">Prof. Alessio Del Bue</a>.
+    During my doctoral studies, I completed a four-month research internship at <a href="https://aws.amazon.com/">AWS</a> and spent six months as a visiting researcher at <a href="https://iit.it/">IIT</a>.
   </p>
   <p>
     I received my PhD in Computer Science from <a href="https://www.itc.nl/" target="_blank">ITC</a>, <a href="https://www.utwente.nl/" target="_blank">University of Twente</a> in 2025, under the supervision of <a href="https://research.utwente.nl/en/persons/george-vosselman" target="_blank">Prof. George Vosselman</a> and <a href="https://sites.google.com/site/michaelyingyang" target="_blank">Prof. Michael Yang</a>.     
-    Thesis defence committees include <a href="https://www.iit.it/people-details/-/people/vittorio-murino" target="_blank">Prof. Vittorio Murino</a> (IIT), <a href="https://staff.fnwi.uva.nl/th.gevers/", target="_blank">Prof. Theo Gevers (University of Amsterdam), <a href="https://people.utwente.nl/f.nex", target="_blank">Prof. Francesco Nex (University of Twente), and <a href="https://people.utwente.nl/b.rosic", target="_blank">Prof. Bojana Rosic (University of Twente).
+    Thesis defence committees include <a href="https://www.iit.it/people-details/-/people/vittorio-murino" target="_blank">Prof. Vittorio Murino</a> (IIT), <a href="https://staff.fnwi.uva.nl/th.gevers/", target="_blank">Prof. Theo Gevers</a> (University of Amsterdam), <a href="https://people.utwente.nl/f.nex", target="_blank">Prof. Francesco Nex</a> (University of Twente), and <a href="https://people.utwente.nl/b.rosic", target="_blank">Prof. Bojana Rosic</a> (University of Twente).
     Prior to this, I obtained my master’s degree from <a href="http://en.whu.edu.cn/" target="_blank">Wuhan University</a> in 2021, advised by <a href="http://gpcv.whu.edu.cn/" target="_blank">Prof. Shunping Ji</a>.
   </p>
   <p>
