--- a/_data/profile.yml
+++ b/_data/profile.yml
@@ -22,7 +22,7 @@ linkedin: yao-wei-1062471ab
 short_bio_text_justify: false
 short_bio: >-
   <p>
-    I am currently a Postdoctoral Research Associate at <a href="https://www.qmul.ac.uk/" target="_blank">Queen Mary University of London</a>, supervised by <a href="https://www.seresearch.qmul.ac.uk/cmai/people/coh/" target="_blank">Dr. Changjae Oh</a>.
+    I am currently a Postdoctoral Research Associate at <a href="https://www.qmul.ac.uk/" target="_blank">Queen Mary University of London</a>, supervised by <a href="https://cj-oh.github.io/" target="_blank">Dr. Changjae Oh</a>.
     Previously, I was a Visiting Researcher at the <a href="https://www.bath.ac.uk/" target="_blank">University of Bath</a>. 
     During my doctoral studies, I completed a four-month research internship at <a href="https://aws.amazon.com/">AWS</a> and spent six months as a visiting researcher at <a href="https://iit.it/">IIT</a>.
   </p>
