--- a/_data/profile.yml
+++ b/_data/profile.yml
@@ -28,7 +28,7 @@ short_bio: >-
   </p>
   <p>
     I received my PhD in Computer Science from <a href="https://www.itc.nl/" target="_blank">ITC</a>, <a href="https://www.utwente.nl/" target="_blank">University of Twente</a> in 2025, under the supervision of <a href="https://sites.google.com/site/michaelyingyang" target="_blank">Prof. Michael Yang</a> and <a href="https://research.utwente.nl/en/persons/george-vosselman" target="_blank">Prof. George Vosselman</a>.     
-    Thesis defence committees include <a href="https://www.iit.it/people-details/-/people/vittorio-murino" target="_blank">Prof. Vittorio Murino</a> (IIT), <a href="https://staff.fnwi.uva.nl/th.gevers/", target="_blank">Prof. Theo Gevers</a> (University of Amsterdam), <a href="https://people.utwente.nl/f.nex", target="_blank">Prof. Francesco Nex</a> (University of Twente), and <a href="https://people.utwente.nl/b.rosic", target="_blank">Prof. Bojana Rosic</a> (University of Twente).
+    My committee members are <a href="https://www.iit.it/people-details/-/people/vittorio-murino" target="_blank">Prof. Vittorio Murino</a> (IIT), <a href="https://staff.fnwi.uva.nl/th.gevers/", target="_blank">Prof. Theo Gevers</a> (University of Amsterdam), <a href="https://people.utwente.nl/f.nex", target="_blank">Prof. Francesco Nex</a> (University of Twente), and <a href="https://people.utwente.nl/b.rosic", target="_blank">Prof. Bojana Rosic</a> (University of Twente).
     Prior to this, I obtained my master’s degree from <a href="http://en.whu.edu.cn/" target="_blank">Wuhan University</a> in 2021, advised by <a href="http://gpcv.whu.edu.cn/" target="_blank">Prof. Shunping Ji</a>.
   </p>
   <p>
