--- a/_data/profile.yml
+++ b/_data/profile.yml
@@ -24,7 +24,7 @@ short_bio: >-
   <p>
     I am currently a Postdoctoral Research Associate at <a href="https://www.qmul.ac.uk/" target="_blank">Queen Mary University of London</a>, supervised by <a href="https://cj-oh.github.io/" target="_blank">Dr. Changjae Oh</a>.
     Previously, I was a visiting scholar at the <a href="https://www.bath.ac.uk/" target="_blank">University of Bath</a>. 
-    During my doctoral studies, I completed a four-month research internship at <a href="https://aws.amazon.com/">AWS AI</a> and spent six months as a visiting researcher at <a href="https://iit.it/">IIT</a>.
+    During my PhD, I have interned at <a href="https://aws.amazon.com/">AWS AI</a> and <a href="https://pavis.iit.it/">IIT PAVIS</a>.
   </p>
   <p>
     I received my PhD in Computer Science from <a href="https://www.itc.nl/" target="_blank">ITC</a>, <a href="https://www.utwente.nl/" target="_blank">University of Twente</a> in 2025, under the supervision of <a href="https://sites.google.com/site/michaelyingyang" target="_blank">Prof. Michael Yang</a> and <a href="https://research.utwente.nl/en/persons/george-vosselman" target="_blank">Prof. George Vosselman</a>.     
