--- a/_data/profile.yml
+++ b/_data/profile.yml
@@ -22,7 +22,7 @@ linkedin: yao-wei-1062471ab
 short_bio_text_justify: false
 short_bio: >-
   <p>
-    I am currently a Postdoctoral Research Associate at <a href="https://www.qmul.ac.uk/" target="_blank">Queen Mary University of London</a>, supervised by <a href="https://cj-oh.github.io/" target="_blank">Dr. Changjae Oh</a>.
+    I am currently a Postdoctoral Research Associate at <a href="https://www.qmul.ac.uk/" target="_blank">Queen Mary University of London</a>, working with <a href="https://cj-oh.github.io/" target="_blank">Dr. Changjae Oh</a> and <a href="https://people.epfl.ch/andrea.cavallaro?lang=en" target="_blank">Prof. Andrea Cavallaro</a>.
     Previously, I was a visiting scholar at the <a href="https://www.bath.ac.uk/" target="_blank">University of Bath</a>. 
     During my PhD, I have interned at <a href="https://aws.amazon.com/">AWS AI</a> and <a href="https://pavis.iit.it/">IIT PAVIS</a>.
   </p>
