--- a/_data/profile.yml
+++ b/_data/profile.yml
@@ -8,7 +8,7 @@ positions:
   logo: /assets/images/badges/QMUL.png  # Logo is optional
 
 
-email: "weicc1996@gmail.com"
+email: "y.wei@qmul.ac.uk"
 # cv_link: link-to-your-cv-file
 gscholar: NYYC2JwAAAAJ  # This is an example, replace it with your own Google Scholar ID
 github: weiyao1996
