--- a/_data/profile.yml
+++ b/_data/profile.yml
@@ -13,7 +13,7 @@ email: "y.wei@qmul.ac.uk"
 gscholar: NYYC2JwAAAAJ  # This is an example, replace it with your own Google Scholar ID
 github: weiyao1996
 researchgate: Yao-Wei-11
-twitter: Cecilia_Yao_WEI  # Do not include the '@' symbol
+# twitter: Cecilia_Yao_WEI  # Do not include the '@' symbol
 # wechat_qrcode: /assets/images/etc/wechat.jpg
 # wechat_prompt: >-
 #   Please tell me your <strong>name</strong> and <strong>affiliation</strong> (current or past) when adding my wechat. Thanks!
