--- a/_data/profile.yml
+++ b/_data/profile.yml
@@ -18,7 +18,7 @@ researchgate: Yao-Wei-11
 # wechat_prompt: >-
 #   Please tell me your <strong>name</strong> and <strong>affiliation</strong> (current or past) when adding my wechat. Thanks!
 linkedin: yao-wei-1062471ab
-# orcid: 0000-0000-0000-0000
+orcid: 0000-0003-4672-4584
 
 short_bio_text_justify: false
 short_bio: >-
