--- a/_data/profile.yml
+++ b/_data/profile.yml
@@ -12,12 +12,12 @@ email: "y.wei@qmul.ac.uk"
 # cv_link: link-to-your-cv-file
 gscholar: NYYC2JwAAAAJ  # This is an example, replace it with your own Google Scholar ID
 github: weiyao1996
-# twitter: Cecilia_Yao_WEI  # Do not include the '@' symbol
-# wechat_qrcode: /assets/images/etc/wechat.jpg
-# wechat_prompt: >-
-#   Please tell me your <strong>name</strong> and <strong>affiliation</strong> (current or past) when adding my wechat. Thanks!
-orcid: 0000-0003-4672-4584
+twitter: Cecilia_Yao_WEI  # Do not include the '@' symbol
+wechat_qrcode: /assets/images/etc/wechat_wcc.jpg
+wechat_prompt: >-
+  Please tell me your <strong>name</strong> and <strong>affiliation</strong> (current or past) when adding my wechat. Thanks!
 linkedin: yao-wei-1062471ab
+orcid: 0000-0003-4672-4584
 
 short_bio_text_justify: false
 short_bio: >-
