Revise WeChat prompt wording
Updated the WeChat prompt message for clarity.

--- a/_data/profile.yml
+++ b/_data/profile.yml
@@ -15,7 +15,7 @@ github: weiyao1996
 twitter: Cecilia_Yao_WEI  # Do not include the '@' symbol
 wechat_qrcode: /assets/images/etc/wechat_wcc.JPG
 wechat_prompt: >-
-  Please tell me your <strong>name</strong> and <strong>affiliation</strong> (current or past) when adding my wechat. Thanks!
+  Please tell me your <strong>name</strong> and <strong>affiliation</strong> when adding my WeChat. Cheers!
 linkedin: yao-wei-1062471ab
 # orcid: 0000-0003-4672-4584
 
