--- a/_data/profile.yml
+++ b/_data/profile.yml
@@ -33,7 +33,7 @@ short_bio: >-
   </p>
   <p>
     My research interests lie in Artificial Intelligence at the intersection of Computer Vision and Machine Learning. 
-    My publication received a total <a href='https://scholar.google.com/citations?user=NYYC2JwAAAAJ'><img src="https://img.shields.io/endpoint?url={{ url | url_encode }}&logo=Google%20Scholar&labelColor=f6f6f6&color=9cf&style=flat&label=citations"></a> citations.
+    My publication received a total <a href="https://scholar.google.com/citations?user=NYYC2JwAAAAJ"><img src="https://scholar-badge.vercel.app/api?user=NYYC2JwAAAAJ"></a> citations.
     If you are interested in my research or potential collaboration opportunities, please feel free to contact me!
   </p>
 
