--- a/_data/profile.yml
+++ b/_data/profile.yml
@@ -33,7 +33,7 @@ short_bio: >-
   </p>
   <p>
     My research interests lie in Artificial Intelligence at the intersection of Computer Vision and Machine Learning. 
-    My publication received a total <a href="https://scholar.google.com/citations?user=NYYC2JwAAAAJ"><img src="https://scholar-badge.vercel.app/api?user=NYYC2JwAAAAJ"></a> citations.
+    My publication received a total <a href="https://scholar.google.com/citations?user=NYYC2JwAAAAJ"><img src="https://img.shields.io/badge/Citations-1234-blue?logo=google-scholar"></a> citations.
     If you are interested in my research or potential collaboration opportunities, please feel free to contact me!
   </p>
 
