--- a/_data/profile.yml
+++ b/_data/profile.yml
@@ -10,14 +10,14 @@ positions:
 
 email: "y.wei@qmul.ac.uk"
 # cv_link: link-to-your-cv-file
-gscholar: NYYC2JwAAAAJ  # This is an example, replace it with your own Google Scholar ID
+gscholar: NYYC2JwAAAAJ
 github: weiyao1996
-twitter: Cecilia_Yao_WEI  # Do not include the '@' symbol
+# twitter: Cecilia_Yao_WEI
 wechat_qrcode: /assets/images/etc/wechat_wcc.JPG
 wechat_prompt: >-
   Please tell me your <strong>name</strong> and <strong>affiliation</strong> when adding my WeChat. Cheers!
 linkedin: yao-wei-1062471ab
-# orcid: 0000-0003-4672-4584
+orcid: 0000-0003-4672-4584
 
 short_bio_text_justify: false
 short_bio: >-
